--- a/assets/style.css
+++ b/assets/style.css
@@ -8,8 +8,8 @@ justify-content: flex-end;
 }
 
 .results-card {
-display: block;
-justify-content: flex-end;
+display: flex;
+justify-content: end;
 }
 
 .btn {
@@ -24,4 +24,46 @@ justify-content: flex-end;
     background-color: lightgreen;
     color: black;
 
+}
+
+img {
+    display: block;
+    max-width: 100vw;
+}
+
+ul {
+    list-style: none;
+}
+
+.results-section .city-info {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -5px;
+}
+
+.li {
+    display: flex;
+    flex-direction: row;
+    margin: 5px;
+    border: 3px solid navy;
+    background-color: navy;
+    justify-content: end;
+}
+
+.results-section .city {
+    position: relative;
+    padding: 10%;
+    background: rgb(181, 71, 23);
+}
+
+.results-section .city-temp {
+    font-size: 40px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: navy
+}
+
+.results-section .city-icon {
+    margin-top: 10px;
+    width: 100px;
 }
