--- a/assets/style.css
+++ b/assets/style.css
@@ -3,18 +3,19 @@ header {
 }
 .search-card {
 display: flex;
-justify-content: flex-end;
-
+flex-direction: column;
+align-items: flex-start;
 }
 
-.results-card {
+.results-section {
 display: flex;
 justify-content: end;
+width: 100%;
 }
 
 .btn {
     width: 100%;
-    padding-top: 10px;
+    padding-top: 15px;
     background-color: green;
     color: white;
     
@@ -35,15 +36,17 @@ ul {
     list-style: none;
 }
 
-.results-section .city-info {
+.results-section .city-container {
     display: flex;
     flex-wrap: wrap;
     margin: -5px;
 }
 
-.li {
+.forecast-cards .li {
     display: flex;
     flex-direction: row;
+    width: 200px;
+    height: 300px;
     margin: 5px;
     border: 3px solid navy;
     background-color: navy;
