--- a/assets/style.css
+++ b/assets/style.css
@@ -42,14 +42,20 @@ ul {
     margin: -5px;
 }
 
+.forecast-cards {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
 .forecast-cards .li {
     display: flex;
     flex-direction: row;
     width: 200px;
     height: 300px;
     margin: 5px;
-    border: 3px solid navy;
-    background-color: navy;
+    border: 3px solid black;
+    background-color: black;
     justify-content: end;
 }
 
